fix placeholders for zscore info

--- a/assets/pipeline_template.html
+++ b/assets/pipeline_template.html
@@ -462,10 +462,10 @@
         <p>
             <b>Description:</b> Calculate Zscores from the final decisions.
         </p>
-        <b>Total Taxa Identified: py_taxa_id_total_ph</b> <br>
-        <b>Taxa identified in Sample Only: py_taxa_id_sample_ph</b> <br>
-        <b>Taxa identified in Negative Only: taxa_id_negative</b> <br>
-        <b>Taxa identified in both Sample and Negative: taxa_id_sample_and_negative</b> <br>
+        <b>Total Taxa Identified:</b> py_taxa_id_total_ph <br>
+        <b>Taxa identified in Sample Only:</b> py_taxa_id_sample_ph <br>
+        <b>Taxa identified in Negative Only:</b> py_taxa_id_negative_ph <br>
+        <b>Taxa identified in both Sample and Negative:</b> py_taxa_id_sample_and_negative_ph <br>
         <b>Inputs:</b> final_decisions.tsv <br>
         <b>Outputs:</b> zscore.tsv detected_pathogens.tsv <br>
         <p>
